# mycc-rust

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  cfg.rs  codegen.rs  const_value.rs  error.rs  lib.rs  main.rs  obj.rs  parse.rs  tokenize.rs  types.rs
src/ast/: expr.rs  stmt.rs
src/cfg/: expr.rs  optimize.rs
src/cfg/optimize/: constant_propagation.rs
src/parse/: decl_spec.rs  declarator.rs  parse_decl.rs
tests/: common.rs  exec_test.rs  exec_test_ex.rs  exec_test_optimization.rs  number.rs
