[package]
name = "mycc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
